--- a/src/Panoramic/MainWindow.xaml
+++ b/src/Panoramic/MainWindow.xaml
@@ -2,139 +2,152 @@
 <Window
     x:Class="Panoramic.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="using:Panoramic.ViewModels">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Border Padding="10">
-        <Grid ColumnSpacing="10" RowSpacing="10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-            <Grid Grid.Column="0" ColumnSpacing="10" RowSpacing="10">
+            <Border Grid.Row="0">
+                <Button Click="AddWidgetButton_Click">Add widget</Button>
+            </Border>
+
+            <Grid Grid.Row="1" ColumnSpacing="10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
+                <Grid Grid.Column="0" ColumnSpacing="10" RowSpacing="10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-                <Border Grid.Row="0" Grid.Column="0" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameA1" />
-                </Border>
-                <Border Grid.Row="0" Grid.Column="1" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameB1" />
-                </Border>
-                <Border Grid.Row="0" Grid.Column="2" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameC1" />
-                </Border>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
 
-                <Border Grid.Row="1" Grid.Column="0" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameA2" />
-                </Border>
-                <Border Grid.Row="1" Grid.Column="1" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameB2" />
-                </Border>
-                <Border Grid.Row="1" Grid.Column="2" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameC2" />
-                </Border>
+                    <Border Grid.Row="0" Grid.Column="0" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameA1" />
+                    </Border>
+                    <Border Grid.Row="0" Grid.Column="1" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameB1" />
+                    </Border>
+                    <Border Grid.Row="0" Grid.Column="2" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameC1" />
+                    </Border>
 
-                <Border Grid.Row="2" Grid.Column="0" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameA3" />
-                </Border>
-                <Border Grid.Row="2" Grid.Column="1" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameB3" />
-                </Border>
-                <Border Grid.Row="2" Grid.Column="2" Background="#222" CornerRadius="5">
-                    <Frame x:Name="FrameC3" />
-                </Border>
-            </Grid>
+                    <Border Grid.Row="1" Grid.Column="0" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameA2" />
+                    </Border>
+                    <Border Grid.Row="1" Grid.Column="1" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameB2" />
+                    </Border>
+                    <Border Grid.Row="1" Grid.Column="2" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameC2" />
+                    </Border>
 
-            <Grid Grid.Column="1" ColumnSpacing="10" RowSpacing="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
+                    <Border Grid.Row="2" Grid.Column="0" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameA3" />
+                    </Border>
+                    <Border Grid.Row="2" Grid.Column="1" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameB3" />
+                    </Border>
+                    <Border Grid.Row="2" Grid.Column="2" Background="#222" CornerRadius="5">
+                        <Frame x:Name="FrameC3" />
+                    </Border>
+                </Grid>
 
-                <Border Grid.Row="0" Background="#222" CornerRadius="5">
+                <Grid Grid.Column="1" RowSpacing="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
 
-                    <Frame x:Name="FrameD1" />
+                    <Border Grid.Row="0" Background="#222" CornerRadius="5">
 
-                </Border>
+                        <Frame x:Name="FrameD1" />
 
-                <Border Grid.Row="1" Background="#222" Padding="20" CornerRadius="5">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
+                    </Border>
+
+                    <Border Grid.Row="1" Background="#222" Padding="20" CornerRadius="5">
 
                         <Frame x:Name="FrameD2" />
 
-                        <Border Grid.Row="0">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="50" />
-                                </Grid.ColumnDefinitions>
+                        <!--<Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-                                <TextBlock Grid.Column="0" FontSize="16">Bookmarks</TextBlock>
+               
 
-                                <Button Grid.Column="1"
-                                        Click="AddBookmarkButton_Click"
-                                        ToolTipService.ToolTip="Add"
-                                        HorizontalAlignment="Right">
-                                    <FontIcon
-                                        Glyph="&#xE710;"
-                                        FontFamily="Segoe MDL2 Assets"
-                                        FontSize="12" />
-                                </Button>
-                            </Grid>
-                        </Border>
+                <Border Grid.Row="0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="50" />
+                        </Grid.ColumnDefinitions>
 
-                        <Border Grid.Row="1" Margin="0 20 0 0">
+                        <TextBlock Grid.Column="0" FontSize="16">Bookmarks</TextBlock>
 
-                            <Border.Resources>
-                                <DataTemplate x:Key="BookmarkListViewTemplate" x:DataType="vm:BookmarkViewModel">
-                                    <HyperlinkButton Content="{x:Bind Title}"
-                                                     NavigateUri="{x:Bind Uri}"
-                                                     HorizontalAlignment="Stretch"
-                                                     HorizontalContentAlignment="Left"
-                                                     Click="{x:Bind Clicked}" />
-                                </DataTemplate>
-                            </Border.Resources>
-
-                            <ListView
-                                ItemsSource="{x:Bind ViewModel.Bookmarks}"
-                                ItemTemplate="{StaticResource BookmarkListViewTemplate}"
-                                SelectionMode="None">
-
-                                <ListView.ItemContainerStyle>
-                                    <Style TargetType="ListViewItem">
-                                        <Setter Property="Template">
-                                            <Setter.Value>
-                                                <ControlTemplate TargetType="ListViewItem">
-                                                    <ListViewItemPresenter ContentMargin="0" Padding="0" />
-                                                </ControlTemplate>
-                                            </Setter.Value>
-                                        </Setter>
-                                    </Style>
-                                </ListView.ItemContainerStyle>
-                            </ListView>
-
-                        </Border>
-        
+                        <Button Grid.Column="1"
+                                Click="AddBookmarkButton_Click"
+                                ToolTipService.ToolTip="Add"
+                                HorizontalAlignment="Right">
+                            <FontIcon
+                                Glyph="&#xE710;"
+                                FontFamily="Segoe MDL2 Assets"
+                                FontSize="12" />
+                        </Button>
                     </Grid>
                 </Border>
+
+                <Border Grid.Row="1" Margin="0 20 0 0">
+
+                    <Border.Resources>
+                        <DataTemplate x:Key="BookmarkListViewTemplate" x:DataType="vm:BookmarkViewModel">
+                            <HyperlinkButton Content="{x:Bind Title}"
+                                             NavigateUri="{x:Bind Uri}"
+                                             HorizontalAlignment="Stretch"
+                                             HorizontalContentAlignment="Left"
+                                             Click="{x:Bind Clicked}" />
+                        </DataTemplate>
+                    </Border.Resources>
+
+                    <ListView
+                        ItemsSource="{x:Bind ViewModel.Bookmarks}"
+                        ItemTemplate="{StaticResource BookmarkListViewTemplate}"
+                        SelectionMode="None">
+
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="ListViewItem">
+                                            <ListViewItemPresenter ContentMargin="0" Padding="0" />
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                    </ListView>
+
+                </Border>
+
+            </Grid>-->
+                    </Border>
+                </Grid>
+
             </Grid>
-
         </Grid>
-
+        
     </Border>
 </Window>
