--- a/src/Panoramic/Pages/Widgets/RecentLinks/RecentLinksWidget.xaml
+++ b/src/Panoramic/Pages/Widgets/RecentLinks/RecentLinksWidget.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="Panoramic.Pages.Widgets.RecentLinksWidget"
+    x:Class="Panoramic.Pages.Widgets.RecentLinks.RecentLinksWidget"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Panoramic.ViewModels.Widgets.RecentLinks">
@@ -16,21 +16,24 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="50" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay}"
-                               FontSize="16" />
+                    <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay}" FontSize="16" />
 
-                    <Button Grid.Column="1"
-                        Click="{x:Bind ViewModel.ClearRecent}"
-                        ToolTipService.ToolTip="Clear"
-                        HorizontalAlignment="Right">
-                        <FontIcon
-                        Glyph="&#xE74D;"
-                        FontFamily="Segoe MDL2 Assets"
-                        FontSize="12" />
-                    </Button>
+                    <DropDownButton Grid.Column="1" AutomationProperties.Name="Setting">
+                        <DropDownButton.Content>
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE712;" FontSize="14" />
+                        </DropDownButton.Content>
+                        <DropDownButton.Flyout>
+                            <MenuFlyout Placement="Bottom">
+                                <MenuFlyoutItem Click="{x:Bind ViewModel.ClearRecent}">Clear</MenuFlyoutItem>
+                                <MenuFlyoutSeparator />
+                                <MenuFlyoutItem Click="SettingsButton_Click">Settings</MenuFlyoutItem>
+                                <MenuFlyoutItem Click="RemoveButton_Click">Remove</MenuFlyoutItem>
+                            </MenuFlyout>
+                        </DropDownButton.Flyout>
+                    </DropDownButton>
                 </Grid>
             </Border>
 
@@ -42,7 +45,7 @@
                                      NavigateUri="{x:Bind Uri}"
                                      HorizontalAlignment="Stretch"
                                      HorizontalContentAlignment="Left"
-                                     Click="{x:Bind Clicked}" />
+                                     Click="{x:Bind Click}" />
                     </DataTemplate>
                 </Border.Resources>
 
