--- a/src/Panoramic/Pages/Widgets/Sample/SampleWidget.xaml
+++ b/src/Panoramic/Pages/Widgets/Sample/SampleWidget.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="Panoramic.Pages.Widgets.SampleWidget"
+    x:Class="Panoramic.Pages.Widgets.Sample.SampleWidget"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
