--- a/src/Panoramic/Pages/Widgets/LinkCollection/AddLinkDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/LinkCollection/AddLinkDialog.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="Panoramic.Pages.AddBookmarkDialog"
+    x:Class="Panoramic.Pages.Widgets.LinkCollection.AddLinkDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
@@ -8,10 +8,12 @@
 
         <TextBox Text="{x:Bind ViewModel.Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  Width="400"
+                 MaxLength="100"
                  PlaceholderText="Title" />
 
         <TextBox Text="{x:Bind ViewModel.Uri, Mode=TwoWay}"
                  Width="400"
+                 MaxLength="5000"
                  Margin="0 20 0 0"
                  PlaceholderText="Uri" />
 
