--- a/src/Panoramic/UserControls/WidgetPicker.xaml
+++ b/src/Panoramic/UserControls/WidgetPicker.xaml
@@ -20,15 +20,7 @@
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
-                    <RowDefinition />
                 </Grid.RowDefinitions>
-
-                <Button Grid.Row="0" Command="{x:Bind WidgetClicked}" CommandParameter="Sample" HorizontalAlignment="Stretch">
-                    <StackPanel>
-                        <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Sample</TextBlock>
-                        <TextBlock Margin="0 5 0 0">This is a sample widget</TextBlock>
-                    </StackPanel>
-                </Button>
 
                 <Button Grid.Row="1" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
                     <StackPanel>
@@ -37,10 +29,10 @@
                     </StackPanel>
                 </Button>
 
-                <Button Grid.Row="2" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
+                <Button Grid.Row="2" Command="{x:Bind WidgetClicked}" CommandParameter="LinkCollection" HorizontalAlignment="Stretch">
                     <StackPanel>
-                        <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
-                        <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
+                        <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Link collection</TextBlock>
+                        <TextBlock Margin="0 5 0 0">A list of links</TextBlock>
                     </StackPanel>
                 </Button>
 
