--- a/src/Panoramic/Pages/Widgets/LinkCollection/AddLinkDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/LinkCollection/AddLinkDialog.xaml
@@ -7,11 +7,13 @@
     <StackPanel Padding="10">
 
         <TextBox Text="{x:Bind ViewModel.Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 TextChanged="{x:Bind ViewModel.ValidateAndEmit}"
                  Width="400"
                  MaxLength="100"
                  PlaceholderText="Title" />
 
-        <TextBox Text="{x:Bind ViewModel.Uri, Mode=TwoWay}"
+        <TextBox Text="{x:Bind ViewModel.Uri, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 TextChanged="{x:Bind ViewModel.ValidateAndEmit}"
                  Width="400"
                  MaxLength="5000"
                  Margin="0 20 0 0"
