--- a/src/Panoramic/MainWindow.xaml
+++ b/src/Panoramic/MainWindow.xaml
@@ -25,72 +25,95 @@
                     <Button Click="AddWidgetButton_Click">Add widget</Button>
                 </Border>
 
-                <Grid Grid.Row="1" ColumnSpacing="10">
+                <Grid x:Name="Grid" Grid.Row="1" RowSpacing="10" ColumnSpacing="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
-                    <Grid Grid.Column="0" ColumnSpacing="10" RowSpacing="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
+                    <Border Grid.Row="0" Grid.Column="0" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="1" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="2" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="3" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="4" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="5" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="6" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="7" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="8" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="0" Grid.Column="9" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
 
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
+                    <Border Grid.Row="1" Grid.Column="0" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="1" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="2" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="3" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="4" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="5" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="6" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="7" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="8" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="1" Grid.Column="9" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
 
-                        <Border Grid.Row="0" Grid.Column="0" CornerRadius="5">
-                            <Frame x:Name="FrameA1" />
-                        </Border>
-                        <Border Grid.Row="0" Grid.Column="1" CornerRadius="5">
-                            <Frame x:Name="FrameB1" />
-                        </Border>
-                        <Border Grid.Row="0" Grid.Column="2" CornerRadius="5">
-                            <Frame x:Name="FrameC1" />
-                        </Border>
+                    <Border Grid.Row="2" Grid.Column="0" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="1" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="2" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="3" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="4" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="5" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="6" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="7" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="8" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="2" Grid.Column="9" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
 
-                        <Border Grid.Row="1" Grid.Column="0" CornerRadius="5">
-                            <Frame x:Name="FrameA2" />
-                        </Border>
-                        <Border Grid.Row="1" Grid.Column="1" CornerRadius="5">
-                            <Frame x:Name="FrameB2" />
-                        </Border>
-                        <Border Grid.Row="1" Grid.Column="2" CornerRadius="5">
-                            <Frame x:Name="FrameC2" />
-                        </Border>
+                    <Border Grid.Row="3" Grid.Column="0" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="1" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="2" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="3" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="4" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="5" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="6" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="7" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="8" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="3" Grid.Column="9" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
 
-                        <Border Grid.Row="2" Grid.Column="0" CornerRadius="5">
-                            <Frame x:Name="FrameA3" />
-                        </Border>
-                        <Border Grid.Row="2" Grid.Column="1" CornerRadius="5">
-                            <Frame x:Name="FrameB3" />
-                        </Border>
-                        <Border Grid.Row="2" Grid.Column="2" CornerRadius="5">
-                            <Frame x:Name="FrameC3" />
-                        </Border>
-                    </Grid>
+                    <Border Grid.Row="4" Grid.Column="0" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="1" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="2" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="3" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="4" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="5" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="6" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="7" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="8" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="4" Grid.Column="9" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
 
-                    <Grid Grid.Column="1" RowSpacing="10">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-
-                        <Border Grid.Row="0" CornerRadius="5">
-                            <Frame x:Name="FrameD1" />
-                        </Border>
-
-                        <Border Grid.Row="1" Padding="20" CornerRadius="5">
-                            <Frame x:Name="FrameD2" />
-                        </Border>
-                    </Grid>
-
+                    <Border Grid.Row="5" Grid.Column="0" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="1" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="2" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="3" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="4" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="5" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="6" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="7" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="8" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
+                    <Border Grid.Row="5" Grid.Column="9" Background="{StaticResource PanoramicWidgetBackgroundBrush}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" />
                 </Grid>
+
             </Grid>
 
         </Border>
