--- a/src/Panoramic/Pages/Widgets/LinkCollection/LinkCollectionSettingsForm.xaml
+++ b/src/Panoramic/Pages/Widgets/LinkCollection/LinkCollectionSettingsForm.xaml
@@ -13,7 +13,7 @@
 
         <TextBlock Grid.Row="0" Text="{x:Bind ViewModel.AreaLabel, Mode=OneWay}" />
 
-        <TextBlock Grid.Row="1">Type: Link collection</TextBlock>
+        <TextBlock Grid.Row="1">Widget: Link collection</TextBlock>
 
         <TextBox Grid.Row="2"
                  Text="{x:Bind ViewModel.Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
