--- a/src/Panoramic/UserControls/WidgetPicker.xaml
+++ b/src/Panoramic/UserControls/WidgetPicker.xaml
@@ -4,61 +4,51 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Grid Height="300">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <ScrollView Height="300" Margin="0 10 0 0">
+        <Grid RowSpacing="10">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="{x:Bind AreaLabel}" />
+            <ToggleButton Grid.Row="0" x:Name="RecentLinksToggle" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
+                    <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
+                </StackPanel>
+            </ToggleButton>
 
-        <ScrollView Grid.Row="1" Margin="0 10 0 0">
-            <Grid RowSpacing="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
+            <ToggleButton Grid.Row="1" x:Name="LinkCollectionToggle" Command="{x:Bind WidgetClicked}" CommandParameter="LinkCollection" HorizontalAlignment="Stretch">
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Link collection</TextBlock>
+                    <TextBlock Margin="0 5 0 0">A list of links</TextBlock>
+                </StackPanel>
+            </ToggleButton>
 
-                <ToggleButton Grid.Row="0" x:Name="RecentLinksToggle" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
-                    <StackPanel>
-                        <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
-                        <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
-                    </StackPanel>
-                </ToggleButton>
+            <ToggleButton Grid.Row="2" x:Name="RecentLinksToggle2" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
+                    <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
+                </StackPanel>
+            </ToggleButton>
 
-                <ToggleButton Grid.Row="1" x:Name="LinkCollectionToggle" Command="{x:Bind WidgetClicked}" CommandParameter="LinkCollection" HorizontalAlignment="Stretch">
-                    <StackPanel>
-                        <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Link collection</TextBlock>
-                        <TextBlock Margin="0 5 0 0">A list of links</TextBlock>
-                    </StackPanel>
-                </ToggleButton>
+            <ToggleButton Grid.Row="3" x:Name="RecentLinksToggle3" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
+                    <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
+                </StackPanel>
+            </ToggleButton>
 
-                <ToggleButton Grid.Row="2" x:Name="RecentLinksToggle2" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
-                    <StackPanel>
-                        <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
-                        <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
-                    </StackPanel>
-                </ToggleButton>
-
-                <ToggleButton Grid.Row="3" x:Name="RecentLinksToggle3" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
-                    <StackPanel>
-                        <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
-                        <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
-                    </StackPanel>
-                </ToggleButton>
-
-                <ToggleButton Grid.Row="4" x:Name="RecentLinksToggle4" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
-                    <StackPanel>
-                        <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
-                        <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
-                    </StackPanel>
-                </ToggleButton>
-            </Grid>
-        </ScrollView>
-
-    </Grid>
+            <ToggleButton Grid.Row="4" x:Name="RecentLinksToggle4" Command="{x:Bind WidgetClicked}" CommandParameter="RecentLinks" HorizontalAlignment="Stretch">
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
+                    <TextBlock Margin="0 5 0 0">Lists links that you have recently clicked in Panoramic</TextBlock>
+                </StackPanel>
+            </ToggleButton>
+        </Grid>
+    </ScrollView>
 
 </UserControl>
