Rework note widget

--- a/src/Panoramic/App.xaml
+++ b/src/Panoramic/App.xaml
@@ -13,6 +13,7 @@
 
             <SolidColorBrush x:Key="PanoramicWidgetBackgroundBrush" Color="#222" />
             <SolidColorBrush x:Key="PanoramicWidgetHighlightedBackgroundBrush" Color="#234" />
+            <SolidColorBrush x:Key="PanoramicBlueForeground" Color="#8DD7E9" />
             <CornerRadius x:Key="PanoramicWidgetCornerRadius">5</CornerRadius>
         </ResourceDictionary>
     </Application.Resources>
