--- a/src/Panoramic/UserControls/TitleBar.xaml
+++ b/src/Panoramic/UserControls/TitleBar.xaml
@@ -2,10 +2,7 @@
 <UserControl
     x:Class="Panoramic.UserControls.TitleBar"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Border Padding="8 0">
         <StackPanel Orientation="Horizontal">
